--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <div class="flip-card-back">
                         <div class="back-card-content">
                             <h1>Secteurs</h1>
-                            <button class="cta white-btn">En savoir plus</button>
+                            <button id="btn-sector" class="cta white-btn">En savoir plus</button>
                         </div>
                     </div>
                 </div>
@@ -84,7 +84,7 @@
                         <div class="front-card-content">
                             <p>Lorem ipsum dolor sit amet.</p>
                             <hr>
-                            <p>Asperiores facere soluta debitis commodi.</p>
+                            <p>Asperiores facere soluta debitis.</p>
                             <hr>
                             <p>Aliquid quod illum sit temporibus.</p>
                         </div>
@@ -92,7 +92,7 @@
                     <div class="flip-card-back">
                         <div class="back-card-content">
                             <h1>Transition</h1>
-                            <button class="cta white-btn">En savoir plus</button>
+                            <button id="btn-transition" class="cta white-btn">En savoir plus</button>
                         </div>
                     </div>
                 </div>
@@ -106,24 +106,57 @@
                         <div class="front-card-content">
                             <p>Lorem ipsum dolor sit amet.</p>
                             <hr>
-                            <p>Accusantium, officia repellat? Illo, praesentium!</p>
+                            <p>Accusantium, officia repellat?</p>
                             <hr>
-                            <p>Aperiam, error beatae? Voluptatem, earum!</p>
+                            <p>Aperiam, error beatae?</p>
                         </div>
                     </div>
                     <div class="flip-card-back">
                         <div class="back-card-content">
                             <h1>Clientelle</h1>
-                            <button class="cta white-btn">En savoir plus</button>
+                            <button id="btn-clients" class="cta white-btn">En savoir plus</button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
+        <!-- Modals Boxes -->
+
+        <!-- Sector modal box -->
+        <div id="modal-sector" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+                <span class="close">&times;</span>
+            </div>
+
+        </div>
+
+        <!-- Transitio  modal box -->
+        <div id="modal-transition" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+                <span class="close">&times;</span>
+            </div>
+
+        </div>
+
+        <!-- Clients modal box -->
+        <div id="modal-clients" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+                <span class="close">&times;</span>
+            </div>
+
+        </div>
+
         <div id="faq" class="survey section">
             
         </div>
 
+        <script src="main.js" defer></script>
     </body>
 </html>
