--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
         </div>
 
-        <!-- Transitio  modal box -->
+        <!-- Transition  modal box -->
         <div id="modal-transition" class="modal">
 
             <!-- Modal content -->
