--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     </head>
     <body>
     
-        <a href="#" id="scroll-to-top"><i class="fas fa-arrow-right"></i></a>
+        <a href="#" id="btn-scroll-to-top"><i class="fas fa-arrow-right"></i></a>
 
-        <header class="section">
+        <header>
             <nav class="nav">
                 <a class="logo" href="#">
                     <img src="images/logo.svg" alt="">
