--- a/index.html
+++ b/index.html
@@ -24,26 +24,26 @@
     
         <a href="#" id="btn-scroll-to-top"><i class="fas fa-arrow-right"></i></a>
 
+        <nav class="nav">
+            <a class="logo" href="#">
+                <img src="images/logo.svg" alt="">
+            </a>
+
+            <ul class="nav-links">
+                <li><a href="#discover">Présentation</a></li>
+                <li><a href="#work">Activité</a></li>
+                <li><a href="#faq">Questionnaire</a></li>
+                <!-- <li><a href="#"><button class="cta">Nous contacter</button></a></li> -->
+            </ul>
+        </nav>
+
         <header>
-            <nav class="nav">
-                <a class="logo" href="#">
-                    <img src="images/logo.svg" alt="">
-                </a>
-
-                <ul class="nav-links">
-                    <li><a href="#discover">À propos</a></li>
-                    <li><a href="#work">Notre travail</a></li>
-                    <li><a href="#faq">Questionnaire</a></li>
-                    <!-- <li><a href="#"><button class="cta">Nous contacter</button></a></li> -->
-                </ul>
-            </nav>
-
             <div class="heading-title">
                 <hgroup>
                     <h1>Inetum</h1>
                     <h2>Nous façonnons votre flux numérique</h2>
                 </hgroup>
-                <a href="#discover"><button class="cta">Découvrir notre activité</button></a>
+                <a href="#discover"><button class="cta">Découvrez Inetum</button></a>
             </div>
         </header>
 
@@ -64,25 +64,47 @@
                 </div>
             </div>
         </section>
+
+        <!-- Work -->
         
         <section id="work" class="cards section">
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="./images/card-hero-crane.jpg" alt="card-hero-image">
-                        <h2>Secteurs</h2>
+                        <img src="./images/card-hero-work.jpg" alt="card-hero-image">
+                        <h2>Services</h2>
                         <div class="front-card-content">
-                            <p>Lorem ipsum dolor sit amet.</p>
+                            <p>Inetum déploi des solutions adaptées au secteur et aux besoins des clients.</p>
                             <hr>
-                            <p>Laborum culpa porro vitae eum!</p>
-                            <hr>
-                            <p>Culpa itaque minima ipsum placeat!</p>
+                            <p>Le chiffre d'affaire d'Inetum en 2020 s'élève à 733 772 000 euros (€).</p>
+                            <p>(Hausse de 40,46% par rapport à 2019).</p>
                         </div>
                     </div>
                     <div class="flip-card-back">
                         <div class="back-card-content">
-                            <h1>Secteurs</h1>
-                            <button id="btn-sector" class="card-cta white-btn modal-open" data-modal="modal1">En savoir plus</button>
+                            <h1>Services</h1>
+                            <div>
+                                <h2>Prestation d'ingénieurie</h2>
+                                <p>services d'application et d'infrastructures</p>
+                                <p>(57% du chiffre d'affaire)</p>
+
+                                <hr>
+
+                                <h2>Infogérance</h2>
+                                <p>intégration de systèmes, externalisation</p>
+                                <p>(21% du chiffre d'affaire)</p>
+
+                                <hr>
+
+                                <h2>Logiciels</h2>
+                                <p>développement de logiciels et de solutions croisées, revente à valeur ajoutée</p>
+                                <p>(15% du chiffre d'affaire)</p>
+
+                                <hr>
+
+                                <h2>Conseils</h2>
+                                <p>(7% du chiffre d'affaire)</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -91,42 +113,60 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="./images/card-hero-wind-turbine.jpg" alt="card-hero-image">
-                        <h2>Transition</h2>
-                        <div class="front-card-content">
-                            <p>Lorem ipsum dolor sit amet.</p>
-                            <hr>
-                            <p>Asperiores facere soluta debitis.</p>
-                            <hr>
-                            <p>Aliquid quod illum sit temporibus.</p>
-                        </div>
-                    </div>
-                    <div class="flip-card-back">
-                        <div class="back-card-content">
-                            <h1>Transition</h1>
-                            <button id="btn-transition" class="card-cta white-btn modal-open" data-modal="modal2">En savoir plus</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="flip-card">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                        <img src="./images/card-hero-factory.jpg" alt="card-hero-image">
+                        <img src="./images/card-hero-wind-customer.jpg" alt="card-hero-image">
                         <h2>Clientèle</h2>
                         <div class="front-card-content">
-                            <p>Lorem ipsum dolor sit amet.</p>
-                            <hr>
-                            <p>Accusantium, officia repellat?</p>
-                            <hr>
-                            <p>Aperiam, error beatae?</p>
+                            <p>Ses clients sont principalement des entreprises qui cherchent à acquérire des solutions numériques dans différents domaines.</p>
                         </div>
                     </div>
                     <div class="flip-card-back">
                         <div class="back-card-content">
                             <h1>Clientèle</h1>
-                            <button id="btn-clients" class="card-cta white-btn modal-open" data-modal="modal3">En savoir plus</button>
+                            <div>
+                                <h2>Aérospatial & Défense</h2>
+                                <hr>
+                                <h2>Automobile</h2>
+                                <hr>
+                                <h2>Banques</h2>
+                                <hr>
+                                <h2>Laboratoires</h2>
+                                <hr>
+                                <h2>Biens de consommation</h2>
+                                <hr>
+                                <h2>Énergie et Utilitaires</h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="./images/card-hero-wind-marketing.jpg" alt="card-hero-image">
+                        <h2>Concurrence</h2>
+                        <div class="front-card-content">
+                            <p>Les principaux concurrents d'Inetum opèrent dans les mêmes domaines, mais ils ont aussi des concurrents dans certains domaines spécifiques comme les télécoms, le conseil et la cybersécurité.</p>
+                        </div>
+                    </div>
+                    <div class="flip-card-back">
+                        <div class="back-card-content">
+                            <h1>Concurrence</h1>
+                            <div>
+                                <h2>Atos</h2>
+                                <hr>
+                                <h2>Capgemini</h2>
+                                <hr>
+                                <h2>Spora steria</h2>
+                                <hr>
+                                <h2>Accenture</h2>
+                                <hr>
+                                <h2>Orange</h2>
+                                <p>(Télécom)</p>
+                                <hr>
+                                <h2>IBM</h2>
+                                <p>(Conseils, Cybersécutité)</p>
+                            </div>
                         </div>
                     </div>
                 </div>
